--- a/belezaID.html
+++ b/belezaID.html
@@ -20,26 +20,49 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Beleza ID</h1>
 
+    <main>
+        <section id="quem-somos" style="text-align: center;">
+            <h2>Quem Somos</h2>
+            <p>Bem-vindo ao Beleza ID! Somos um salão de beleza dedicado a oferecer tratamentos de alta qualidade,
+                proporcionando bem-estar e confiança aos nossos clientes. Com uma equipe experiente e atenciosa, estamos
+                aqui para ajudar você a se sentir e parecer o seu melhor.</p>
+        </section>
+
+        <section id="localizacao">
+            <h2>Localização</h2>
+            <p>Nosso salão está localizado na Rua Exemplo, 123, Bairro Beleza, Cidade Estilo. Fácil acesso e
+                estacionamento disponível.</p>
+            <!-- Opcional: Mapa incorporado do Google Maps -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.030938129582!2d-46.65657178446714!3d-23.58800568466778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59b56b7b89ab%3A0xb1d676f158fd8353!2sAv.%20Paulista%2C%201575%20-%20Bela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001311-200!5e0!3m2!1sen!2sbr!4v1617087089837!5m2!1sen!2sbr" width="300" height="150" style="border:0; align-self: flex-end;" allowfullscreen="" loading="lazy"></iframe>
+        </section>
+
+        <section id="fale-conosco">
+            <h2>Fale Conosco</h2>
+            <p>Entre em contato conosco para agendar seu horário ou tirar dúvidas:</p>
+            <ul>
+                <li><i class="fas fa-phone"></i> Telefone: (11) 1234-5678</li>
+                <li><i class="fas fa-envelope"></i> Email: contato@belezaid.com</li>
+                <li><i class="fas fa-whatsapp"></i> WhatsApp: (11) 98765-4321</li>
+            </ul>
+        </section>
     </main>
 
     <footer>
         <p>&copy; 2024 - Beleza ID. Todos os direitos reservados.</p>
     </footer>
+
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', function (event) {
+            event.preventDefault();
+            const role = document.getElementById('role').value;
+            if (role === 'admin') {
+                window.location.href = 'admin_dashboard.html';
+            } else {
+                window.location.href = 'agendamento_cliente.html';
+            }
+        });
+    </script>
 </body>
 
 </html>
-
-<script>
-    document.getElementById('loginForm').addEventListener('submit', function (event) {
-        event.preventDefault();
-        const role = document.getElementById('role').value;
-        if (role === 'admin') {
-            window.location.href = 'admin_dashboard.html';
-        } else {
-            window.location.href = 'agendamento_cliente.html';
-        }
-    });
-</script>
